syntax = "proto3";
package item;

service ItemService {
  rpc CreateItem (CreateItemRequest) returns (Item);
  rpc GetItem (GetItemRequest) returns (Item);
  rpc UpdateItem (UpdateItemRequest) returns (Item);
  rpc DeleteItem (DeleteItemRequest) returns (Empty);
}

message Item {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
}

message GetItemRequest {
  int32 id = 1;
}

message UpdateItemRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message DeleteItemRequest {
  int32 id = 1;
}

message Empty {}
